# ouroboros

./: .gitignore  AGENT-GAPS.md  AGENT.md  BLUEPRINT_DESIGN.md  CHALLENGE_ASSESSMENT.md  COMPARISON.md  CONTEXT_AUDIT.md  CONTRIBUTING.md  IMPLEMENTATION.md  IMPLEMENTATION_v2.md  ISSUES.md  PROMPTING_CONVENTIONS.md  README.LLM.md  REFINEMENT.md  all_flows.md  blueprint.md  build_flows.sh  challenge_config.yaml  claude-skill-writing-patterns.md  game_challenge.yaml  greenfield.md  mission_control_flow.md  mission_control_vis.md  models_challenge.yaml  ouroboros.md  ouroboros.py  ouroboros_universal_prompt.md  pyproject.toml  run_demo.py  smoke_test.py  test_config.yaml
agent/: __init__.py  formatters.py  loader.py  loader_v2.py  loop.py  markdown_fence.py  mission_config.py  models.py  repomap.py  runtime.py  schema_extract.py  tail_call.py  template.py  trace.py  trace_cli.py  visualize.py
dev/: lint_flows.py  smoke_test.py
flows/: compiled.json  create_file.yaml  create_plan.yaml  design_and_plan.yaml  mission_control.yaml  registry.yaml  test_branching.yaml  test_inference.yaml  test_simple.yaml
llmvp/: README.LLM.md  README.md  active_config.txt  llmvp.py  pyproject.toml
llmvp/api/: __init__.py  graphql_api.py  main.py  rest_api.py
llmvp/benchmarks/: README.md  prompts.yaml  streaming.py
llmvp/configs/: devstral-2-small-24b.yaml  gpt-oss-120b-a5.yaml  mistral-small-4-119b-a6.yaml  qwen3-next-coder-80b-a3.yaml  qwen3.5-122b-a10.yaml  qwen3.5-35b-a3.yaml  reference.yaml
llmvp/core/: __init__.py  config.py  generation_tracker.py  inference.py  interaction_logger.py  lifecycle.py  session_manager.py
llmvp/formats/: __init__.py  chatml.yaml  harmony.yaml  registry.py  renderer.py  schema.py
llmvp/inference/: __init__.py  tokenizer.py
llmvp/inference/backends/: __init__.py  base.py  factory.py  llama_cpp_backend.py
llmvp/knowledge/: SOUL.md  tools.txt
llmvp/logs/: delim_crf.model  training_corpus.jsonl
llmvp/preprocessing/: __init__.py  cli.py  static_tokens.py
llmvp/tests/: test_config.py  test_mock.py
llmvp/tools/: __init__.py  archetypal_interactions.py  card_lookup.py  protocol.py  registry.py
llmvp/training/: __init__.py  corpus.py  crf.py  curated.py  featurizer.py  hmm.py  prompts.py  synthetic.py
ouroboros-challenge/: .gitignore  README.md  demo_adventure.yaml  engine.py  interactions.jsonl  loader.py  main.py  models.py  parser.py  pyproject.toml  trace_62f12691.md  trace_899e36bc.md  world_data.yaml
ouroboros-challenge/src/: __init__.py  engine.py  loader.py  main.py  models.py  parser.py
tests/: __init__.py  (+25 more)
(+109 files in other folders)
