[project]
name = "ouroboros"
version = "0.1.0"
description = "Flow-driven autonomous coding agent backed by LLMVP local inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.6",
    "scipy>=1.17.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]
